[tool.poetry]
name = "metric-learning-tutorial"
version = "0.1.0"
description = ""
authors = ["Kaito Sugimoto <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-metric-learning = "^0.9.99"
faiss-gpu = "^1.7.1"
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
