[tool.poetry]
name = "metric-learning-tutorial"
version = "0.1.0"
description = ""
authors = ["Kaito Sugimoto <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-metric-learning = "^0.9.99"
faiss-gpu = "^1.7.1"
torchvision = "^0.10.0"
umap-learn = "^0.5.1"
ipykernel = "^6.4.1"
matplotlib = "^3.4.3"
transformers = "^4.11.3"
scikit-learn = "^1.0"
datasets = "^1.12.1"
ipywidgets = "^7.6.5"
pandas = "^1.3.3"
fugashi = "^1.1.1"
ipadic = "^1.0.0"
torchtext = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
